# explite

./: README.md  package.json  svelte.config.js  vite.config.mjs  watcher.rs
src/: common.css  constants.ts  deferred.ts  helper.ts  history.ts  ipc.ts  main.ts  path.ts  settings.ts  types.d.ts  util.ts  webkitDnd.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: dialog.rs  gtk_fs.rs  gtk_thumb.rs  helper.rs  lib.rs  main.rs  menu.rs  session.rs  translate.rs  watcher.rs
src/states/: clipState.svelte.ts  columnState.svelte.ts  driveState.svelte.ts  headerState.svelte.ts  listState.svelte.ts  renameState.svelte.ts  settingsState.svelte.ts  slideState.svelte.ts
src/svg/: AppSvg.svelte  AscSvg.svelte  AudioSvg.svelte  BackSvg.svelte  ClearSvg.svelte  DescSvg.svelte  DirDesktopSvg.svelte  DirDocuments.svelte  DirDownloadsSvg.svelte  DirImageSvg.svelte  DirMusicSvg.svelte  DirVideo.svelte  DisplaySvg.svelte  DriveSvg.svelte  FileSvg.svelte  FolderSvg.svelte  FowardSvg.svelte  ImageSvg.svelte  Json.svelte  LargeDriveSvg.svelte  LaunchSvg.svelte  LinuxSvg.svelte  List.svelte  NewFolderSvg.svelte  NewSymLinkSvg.svelte  PathDividerSvg.svelte  PlusSvg.svelte  PrefSvg.svelte  RecycleSvg.svelte  ReloadSvg.svelte  Shortcut.svelte  ThreeDots.svelte  TileSvg.svelte  UpwardSvg.svelte  VideoSvg.svelte  ZipSvg.svelte
src/translation/: en.ts  ja.ts  useTranslation.ts
src/view/: Bar.svelte  BottomBar.svelte  Column.svelte  FileIcon.svelte  GridView.svelte  Header.svelte  Home.svelte  Left.svelte  ListView.svelte  Preference.svelte  Rename.svelte  Symlink.svelte  TopBar.svelte  View.svelte  VirtualList.svelte  app.ts  appStateReducer.svelte.ts  appStateReducer.ts  dialog.css  editor.ts  listStateReducer.ts  view.css
