[package]
name = "explite"
version = "0.1.0"
description = "explite"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = [ "devtools", "protocol-asset"] }
serde = { version = "1", features = ["derive"] }
crossbeam-channel = "0.5.15"
notify-debouncer-full = "0.6.0"
wcpopup = { version = "0.7.3", features = ["webview"] }
zouni = { version = "0.1.25", features = ["webview2"] }
rs-vips = "0.3.1"

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
  "Win32_System_Threading",
  "Win32_Foundation",
]

[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18.2" }
zbus = { version = "5.12.0" }
url = "2"
ffmpeg-next = "7.0.0"
md-5 = "0.10.6"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "explite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = "s" # Optimize for binary size
strip = true # Remove debug symbols
